# Bits

./: CMakeLists.txt  README.md
report/: output.txt  report.md
src/: Bits.cpp  main.cpp  test.cpp
